@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-27T02:06:48Z",
-  "count" : 2,
+  "timestamp" : "2025-08-09T01:50:19Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
