@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-08-08T12:50:40Z",
+  "timestamp" : "2025-08-09T01:50:19Z",
   "count_outdated" : 9330,
   "uniques_outdated" : 4510,
-  "count" : 9415,
-  "uniques" : 4580,
+  "count" : 9416,
+  "uniques" : 4581,
   "clones" : [
     {
       "timestamp": "2025-07-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-27T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2025-08-08T00:00:00Z",
-      "count": 17,
-      "count_minmax": [ 17, 17 ],
-      "count_decinc": [ 0, 17 ],
-      "uniques": 13,
-      "uniques_minmax": [ 13, 13 ],
-      "uniques_decinc": [ 0, 13 ]
+      "count": 18,
+      "count_minmax": [ 17, 18 ],
+      "count_decinc": [ 0, 18 ],
+      "uniques": 14,
+      "uniques_minmax": [ 13, 14 ],
+      "uniques_decinc": [ 0, 14 ]
     }
   ]
 }
