@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2025-07-26T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-07-27T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2025-08-08T00:00:00Z",
-      "count": 17,
-      "uniques": 13
+      "count": 18,
+      "uniques": 14
     }
   ]
 }
